--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,21 @@ name = "gb-emu"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "gb"
+path = "src/lib.rs"
+
+[[bin]]
+name = "gb"
+path = "src/main.rs"
+test = false
+
+[[bin]]
+name = "test"
+path = "src/test.rs"
+test = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-enumflags2 = "0.7.8"
+# enumflags2 = "0.7.8"
