--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
+[workspace]
+members = ["core"]
+resolver = "2"
+
 [package]
 name = "gb-emu"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-name = "gb"
-path = "src/lib.rs"
 
 [[bin]]
 name = "gb"
@@ -20,4 +20,7 @@ test = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gb = { path = "./core" }
+glium = "0.33.0"
+winit = "0.28.7" # Dependency of glium v0.33. Winit v0.29 doesn't work
 # enumflags2 = "0.7.8"
