--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ test = false
 
 [dependencies]
 gb = { path = "./core" }
-glium = "0.33.0"
-winit = "0.28.7" # Dependency of glium v0.33. Winit v0.29 doesn't work
+raylib = { version = "5.0.0", package = "raylib-ffi" }
+# glium = "0.33.0"
+# winit = "0.28.7" # Dependency of glium v0.33. Winit v0.29 doesn't work
 # enumflags2 = "0.7.8"
