--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,9 +1,21 @@
 [toolchain]
-channel = "nightly-2023-11-19"
+channel = "nightly-2023-12-29"
+# channel = "nightly-2023-11-19"
 # components = ["miri", "llvm-tools", "rust-src", "rustfmt", "clippy"]
 # components = ["rust-analyzer", "rustc", "llvm-tools", "rust-src", "rustfmt", "clippy"]
 # targets = ["thumbv6m-none-eabi", "thumbv7em-none-eabi", "thumbv7em-none-eabihf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf"]
 targets = ["thumbv6m-none-eabi"]
+# components = [
+# info: downloading component 'cargo'
+# info: downloading component 'clippy'
+# info: downloading component 'rust-docs'
+# info: downloading component 'rust-std' for 'thumbv6m-none-eabi'
+# info: downloading component 'rust-std'
+# info: downloading component 'rustc'
+# info: downloading component 'rustfmt'
+# rust-analyzer
+# ]
+
 
 [build]
 target = "thumbv6m-none-eabi"
